[tool.black]
line-length = 79
skip-string-normalization = true
exclude = '''
/(
    \.venv
)/
'''

[tool.poetry]
name = "failed_avro"
version = "0.1.0"
description = ""
authors = ["Lech Gudalewicz <lechgu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
pytest = "^4.4"
flake8 = "^3.7"
pep8-naming = "^0.8.2"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
